added all sections, responsiveness remains

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             font-family: "Sora", serif;
         }
     </style>
+    <script src="https://kit.fontawesome.com/f7dc5a135c.js" crossorigin="anonymous"></script>
     <title>Pet Shop</title>
 </head>
 
@@ -416,6 +417,84 @@
                 </div>
             </div>
         </section>
+
+        <!-- Price Section -->
+        <section class="my-[140px] mx-[140px]">
+            <h3 class="adlam-font text-[36px] mb-[47px]">Everyday Low Price</h3>
+            <!-- Card Container -->
+            <div class="flex gap-6">
+                <!-- left card -->
+                <div class="flex bg-gradient-to-r from-[#F8CCFB] to-[#ACD2FD] rounded-lg w-[900px]">
+                    <div class="my-[137px] ml-[88px]">
+                        <p class="sora-font text-[20px]">Under Price</p>
+                        <h3 class="adlam-font text-[32px]">Pet Grooming Mitt</h3>
+                        <p class="adlam-font text-white text-[24px]">(Easy Hair Removal)</p>
+                        <h3 class="adlam-font text-[56px]">$7.99</h3>
+                    </div>
+                    <div>
+                        <img src="images/cute-dog-mid.png" alt="">
+                    </div>
+                </div>
+                <!-- right card -->
+                <div class="flex bg-gradient-to-tl from-[#F9DF8A] to-[#FFF9F4] rounded-lg w-[700px]">
+                    <div>
+                        <h3 class="adlam-font text-[32px] mt-[55px] ml-[50px]">T-Shirt for Dogs</h3>
+                        <h3 class="ml-[50px] adlam-font text-[56px] text-[#FFDC26]">$7.99</h3>
+                    </div>
+                    <div>
+                        <img class="mt-20 lg:mt-24" src="images/cute-pet-mid.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Pawsome card -->
+        <section class="md:container mx-auto">
+            <!-- Card container -->
+            <div class="bg-[#FFF9F4] flex gap-28 rounded-2xl ml-[140px] mr-[140px] relative top-56 -mt-52 mx-5">
+                <div class="mt-[38px] ml-[90px] mb-[38px]">
+                    <img src="images/cute-pet-mid.png" alt="">
+                </div>
+                <div class="mt-[77px]">
+                    <h3 class="mb-[20px] adlam-font text-[36px]">
+                        Get Pawsome News!
+                    </h3>
+                    <p class="mb-[38px] sora-font text-[20px]">
+                        Exclusive training tips, ticks, product deals and more.
+                    </p>
+                    <input type="text" placeholder="Enter email" class="input w-[472px]" />
+                    <button class="btn bg-common-button sora-font text-[20px] mb-[134px] mt-[20px]">
+                        Subscribe
+                    </button>
+                </div>
+            </div>
+        </section>
+
+        <!-- Footer section -->
+        <footer class="footer bg-[#F9DF8A] pl-4 lg:pl-60p-10 mt-0 pt-80 pb-10">
+            <nav class=" ml-[140px]">
+                <div class="flex items-center gap-3 mb-[24px]">
+                    <img src="images/logo-footer.png" alt="" class="w-10 h-10">
+                    <h4 class="text-[26px] font-normal sora-font">Browse<span class="text-[#FFDC26]">4</span>Pets</h4>
+                </div>
+                <p class="text-[20px] sora-font">Discover a world of treats, toys, and <br> essentials
+                    handpicked for your furry <br> friends</p>
+            </nav>
+            <nav class="text-[20px] font-normal sora-font space-y-6">
+                <a class="link link-hover">Find a pet</a>
+                <a class="link link-hover">Breeds</a>
+                <a class="link link-hover">Contact us</a>
+            </nav>
+            <nav class="">
+                <p class="text-[16px] font-medium sora-font">Follow Us</p>
+                <div class="flex gap-7 text-[20px]">
+                    <a><i class="fa-brands fa-facebook"></i></a>
+                    <a><i class="fa-brands fa-instagram"></i></a>
+                    <a><i class="fa-brands fa-linkedin"></i> </a>
+                    <a><i class="fa-brands fa-youtube"></i></a>
+                </div>
+            </nav>
+        </footer>
     </main>
 </body>
 
